Minor homepage edits, faux module pages

--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -1,7 +1,17 @@
-<div class="sidebar-button">
+<div class="sidebar-button row">
+    <div class="col-auto">
     <a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
         <i class="fas fa-bars" ></i>
     </a>
+    </div>
+    <div class="col-auto">
+        <div class="vertical-bar"></div>
+    </div>
+    <div class="col-auto">
+    <a href="/index.html" style="text-decoration: none;">
+        DINE Lab, RMIT University
+    </a>
+    </div>
 </div>
 
 <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
@@ -21,7 +31,7 @@
                     <div class="accordion-body">
                         <div class="row justify-content-around">
                             <div class="col-auto gy-2">
-                                <a href="#" class="btn btn-primary">Go to Module</a>
+                                <a href="/pages/module1.html" class="btn btn-primary">Go to Module</a>
                             </div>
                             <div class="col-auto gy-2">
                                 <a href="#" class="btn btn-secondary">Take the test</a>
@@ -40,7 +50,7 @@
                     <div class="accordion-body">
                         <div class="row justify-content-around">
                             <div class="col-auto gy-2">
-                                <a href="#" class="btn btn-primary">Go to Module</a>
+                                <a href="/pages/module2.html" class="btn btn-primary">Go to Module</a>
                             </div>
                             <div class="col-auto gy-2">
                                 <a href="#" class="btn btn-secondary">Take the test</a>
@@ -59,7 +69,7 @@
                     <div class="accordion-body">
                         <div class="row justify-content-around">
                             <div class="col-auto gy-2">
-                                <a href="#" class="btn btn-primary">Go to Module</a>
+                                <a href="/pages/module3.html" class="btn btn-primary">Go to Module</a>
                             </div>
                             <div class="col-auto gy-2">
                                 <a href="#" class="btn btn-secondary">Take the test</a>
