--- a/css/extra.css
+++ b/css/extra.css
@@ -3,23 +3,50 @@
     top: 0;
     left: 0;
     margin: 1.3rem;
-    font-size: 2rem;
+    font-size: auto;
 }
 
 .page-header{
     text-align: center;
-    font-family: Impact;
-    letter-spacing: 3px;
     padding: 2rem;
     background-color: #2e3859;
     color: #f9efe2;
+}
+
+.page-paragraph{
+    padding: 2rem;
+    background-color: #2e3859;
+    color: #f9efe2;
+}
+
+.page-paragraph-alt{
+    padding: 2rem;
+    background-color: #ff8333;
+    color: #f9efe2;
+}
+
+.annotation{
+    font-size: 14px;
+    font-style: italic;
+    color: grey;
+}
+
+h1{
+    text-align: center;
+    font-family: Impact;
+    letter-spacing: 3px;
+}
+
+h2{
+    text-align: center;
+    letter-spacing: 2px;
 }
 
 .content-box{
     background-color: #d3faff;
     margin: 6rem 0;
     border-radius: 1rem;
-    padding: 4rem;
+    padding: 2rem;
 }
 
 .card-img-top{
@@ -29,7 +56,6 @@
 
 .card-body {
     position: relative;
-    min-height: 170px;
 }
 
 .vertical-bar{
