--- a/css/extra.css
+++ b/css/extra.css
@@ -63,3 +63,12 @@ h2{
     height: 100%;
     background-color: #ff8333;
 }
+
+@media (max-width: 991.98px) {
+    .content-box{
+        background-color: #d3faff;
+        margin: 6rem 0;
+        border-radius: 0.5rem;
+        padding: 1rem 0;
+    }
+}
